tests/NormalTests/paczka1/small_fuzzy/17252645.err
Error in line 5: Zn5BGqXJ4 A241 71,9
Error in line 6: Zn5BGqXJ4 S327 69,8
Error in line 9: Zn5BGqXJ4 S164 42,8
